docs/css/styles.css
/* ... */
.nav_link:hover {
    color: var(--highlight);
}

.nav_icon {
    font-size: 1.2rem;
}

@media screen and (max-width: 767px) {

    .nav_menu {
        position: fixed;
        bottom: -100%;
        left: 0;
        width: 100%;
        background-color: var(--soft-white);
        padding: 2rem 1.5rem 4rem;
        box-shadow: 0 -1 4px rgba(99, 73, 73, 0.25);
        border-radius: 1.5rem 1.5rem 0 0;
        transition: 0.3s;
    }

    .wrapper {
        width: 100%;
        margin: auto;
    }

    .skills-item {
        width: 100%;
    }
    
    #projects p {
        font-size: 16px;
    }
    
    #projects .tags p {
        font-size: 11px;
    }
}

/* CLOSE MENU */
.nav_close {
    position: absolute;
    right: 1.3rem;
    bottom: 0.5rem;
    font-size: 1.5rem;
    cursor: pointer;
    /* color: var(--highlight); */
}

.nav_close:hover {
    color: var(--highlight);
}

/* CHANGE BG HEADER SHADOW */
.scroll-header {
    box-shadow: 0 -1px 20px rgba(0, 0, 0, 0.25);
    transition: 0.3s ease-in-out;
}

/* ======================= FRONT PAGE ======================= */
.intro {
    position: relative;
    text-align: center;
    height: 100vh;
    padding-top: 20vh;

    /* GRANDIENT BG */
    background: linear-gradient(-45deg, #96D9D0, #B5BAD0, #7389AE, #416788);
    background-size: 400% 400%;
    animation: gradient 8s ease infinite;
    height: 100vh;
}

@keyframes gradient {
    0% {
      background-position: 0% 50%;
    }
    50% {
      background-position: 100% 50%;
    }
    100% {
      background-position: 0% 50%;
    }
  }

.intro img {
    width: 200px;
}

.intro h1, .intro h4 {
    color: var(--soft-white);
}

.intro h1, .intro h4, .intro .links{ 
    padding: 1.5em 0 0 0;
}

/* ======================= ABOUT ======================= */
.about {
    color: var(--soft-black);
    max-width: 1000px;
    margin: 0 auto;
    padding: 4em 2em;
}

.section_title-about strong {
    display: block;
    font-size: 4rem;
    font-weight: 700;
}

.section_subtitle-about {
    color: var(--soft-white);
    background-color: var(--medium);
    padding: 0.7em 1em;
}

.portrait {
    display: block;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    width: 15em;
    margin: 1em auto;
}

@media screen and (min-width: 768px) {
    .about {
        display: grid;
        grid-template-areas: "title img" "subtitle img" "text img";
        grid-column-gap: 2em;
    }

    .section_title-about {
        grid-area: title;
    }

    .section_subtitle-about {
        grid-column: 1 / -1;
        grid-row: 2;
        position: relative;
        left: -1em;
        width: calc(100% + 2em);
        padding: 0.7em 1em 0.7em 1em;
        margin: auto;
    }

    .portrait {
        grid-area: img;
        width: 15em;
        position: relative;
        z-index: 2;
        margin: auto;
    }
}

/* ======================= TECHNICAL SKILL ======================= */
.skills {
    color: var(--soft-white);
    background-color: var(--light);
    padding: 5em 0;
    width: 100%;
}

.skills-item {
    float: left;
    width: 50%;
    padding: 1rem 20px;
}

.skills-item::after {
    content: "";
    display: table;
    clear: both;
}

.two-col {
    width: 100%;
}

.progress-bar {
    background-color: #e0e0e0;
    padding: 0.2em;
    border-radius: 20px;
    box-shadow: inset 0 1px 3px rgba(0, 0, 0, .2);
}

.progress-bar-fill {
    display: block;
    height: 22px;
    background-image: linear-gradient(45deg, var(--medium) 0%, var(--highlight) 100%);
    border-radius: 20px;
    
    transition: width 1s ease-in-out;
}

.progress-bar-fill.animated[style] {
    width: 0% !important;
}

.other-skills {
    display: block;
    padding: 1rem 0;
}

.row-icon {
    display: flex;
    flex-wrap: wrap;
    padding: 0 4px;
}

.column-icon {
    flex: 12.5%;
    max-width: 140px;
    max-height: 140px;
    padding: 0 1rem;
    margin: 1rem auto 5rem;
}

.column-icon svg {
    margin-top: 8px;
    vertical-align: middle;
    width: 100%;
    margin: 0 auto;
}
.column-icon png {
    margin-top: 8px;
    vertical-align: middle;
    width: 100%;
    margin: 0 auto;
}

@media screen and (max-width: 967px) {
    .skills {
        padding: 5em 2em;
    }

    .skills-item {
        width: 100%;
        padding: 1rem 0;
    }

    /* change rows/columns */
    /* .column-icon {
        flex: 25%;
        max-width: 25%;
    } */

    /* .row-icon {
        margin: 0;
        padding: 0;
    } */
}

/* ======================= PROJECTS ======================= */
.projects {
    padding: 5em 1em;
    width: 100%;
}

.col {
    float: left;
    width: 50%;
    /* max-width: 600px; */
    padding: 10px 10px;
}

.row {
    display: table;
}

.row:after {
    content: "";
    display: table;
    clear: both;
  }
  
.project-card {
    position: relative;
    background-color: var(--medium);
    color: var(--soft-white);
    border-radius: 2px;
    box-shadow: var(--shadow);
    padding: 5px;
    height: 450px;
    transition: all 0.3s;
    flex: 0 1 49%;
}

.tags {
    position: absolute;
    max-height: 4.5rem;
    overflow: hidden;
    bottom: 15px;
    left: 15px;
}

.tags li {
    display: inline-block;
    background-color: var(--soft-white);
    color: var(--soft-black);
    border-radius: 15px;
    font-size: 12px;
    font-weight: 550;
    padding: 0.5em;
    margin: 3px 5px;
}

.card-overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    overflow: scroll;
    text-overflow: ellipsis;
    transition: .5s ease;
    background-image: linear-gradient(0deg, var(--highlight) 0%, rgb(0, 0, 0, 0) 100%);
}

.card-overlay ul {
    position: absolute;
    top: 30%;
    text-align: center;
    width: 100%;
    padding: 0;
    margin: 0;
}

.card-overlay .links img {
    object-fit: cover;
    width: 25%;
    max-width: 120px;
}

.project-card:hover {
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}
/* ... */

